src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/error-propagation.tessla
in x: Events<Int>
in y: Events<Int>

out if x / y == 1 then 23 else 42 as z